fix window width, delete clip time, add scrollbar

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -6,9 +6,31 @@ html, body {
     max-height: 350px; */
     width: 550px;
     height: 470px;
-    padding-right: 0px !important;
+    margin-left: 2px;
+    margin-right: 4px;
   
 }
+
+/* body::-webkit-scrollbar{
+    display: none;
+} */
+
+body::-webkit-scrollbar {
+    width: 5px;
+}
+
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px #121212;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #52528C;
+    outline: 1px solid rgb(7, 7, 7);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #383866;
+  }
 
 .black-theme {
     background-color: #121212;
